syntax = "proto3";

option csharp_namespace = "TestGrpcService";

package Person;

service PersonServ {
	rpc GetPerson(GetPersonRequest) returns (Person);
}

message Person {
	int32 id = 1;
	string name = 2;
	string email = 3;
}

message GetPersonRequest {
	int32 id = 1;
}